duniverse/cstruct.5.1.1/ppx_test/errors/cstruct_unknown_endian.ml
[%%cstruct
  type t =
  { a : uint8_t
  }
[@@unknown_endian]
]
